@@ -1,3 +1,8 @@
+2010-01-05  Marc-André Lureau  <mlureau@flumotion.com>
+
+	* flumotion/component/consumers/applestreamer/applestreamer.py:
+	Register mountpoint prefix in porter, instead of path.
+
 2010-01-04  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/applestreamer.py:
